Check the status code of HTTP channels before blindly loading the sheet.  Bug 112644, r=bbaetz, sr=darin